# Jarvis

./: .gitignore  README.md  README_EN.md  RUNBOOK.md  package.json  pnpm-workspace.yaml
.github/workflows/: android.yml  native.yml  packages.yml
apps/unity/Assets/Editor/: DemoSceneAutoSetup.cs
apps/unity/Assets/Plugins/Android/: AndroidManifest.xml
apps/unity/Assets/Scenes/: Demo.unity
apps/unity/Assets/Scripts/: AppLifecycle.cs  AudioService.cs  DemoController.cs  EventBus.cs  GestureClassifier.cs  HandTracker.cs  HudController.cs  JarvisNative.cs  Logger.cs  PerfOverlay.cs  PlatformActions.cs  PrivacyMode.cs  ToolBridge.cs  TtsPlayer.cs
apps/unity/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
apps/unity/Assets/XR/Settings/: OpenXR Package Settings.asset
apps/unity/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
apps/unity/UserSettings/: EditorUserSettings.asset
apps/unity/UserSettings/Layouts/: default-2022.dwlt
benchmarks/: asr_latency.cc  wake_benchmark.cc
configs/: default.json
models/bge/: manifest.json
models/faster-whisper/: manifest.json
models/openwakeword/: manifest.json
models/piper/: manifest.json
native/: CMakeLists.txt  README.md
native/cmake/: FindWebRTCAudioProcessing.cmake
native/include/jarvis/: asr.h  audio_pipeline.h  tts.h  wakeword.h
native/src/: asr.cc  audio_pipeline.cc  tts.cc  wakeword.cc
scripts/: build_android.sh  build_desktop.ps1  get_models.sh  run_smoke_demo.sh  verify_env.sh
